docs/0.12.0/_sources/api/gwpy.segments.SegmentList.rst.txt


SegmentList
=========================

.. currentmodule:: gwpy.segments

.. autoclass:: SegmentList
   :no-inherited-members:

   

   
   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~SegmentList.append
      ~SegmentList.coalesce
      ~SegmentList.contract
      ~SegmentList.count
      ~SegmentList.extend
      ~SegmentList.extent
      ~SegmentList.find
      ~SegmentList.index
      ~SegmentList.insert
      ~SegmentList.intersects
      ~SegmentList.intersects_segment
      ~SegmentList.pop
      ~SegmentList.protract
      ~SegmentList.read
      ~SegmentList.remove
      ~SegmentList.reverse
      ~SegmentList.shift
      ~SegmentList.sort
      ~SegmentList.write

   
   

   
   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: append
   .. automethod:: coalesce
   .. automethod:: contract
   .. automethod:: count
   .. automethod:: extend
   .. automethod:: extent
   .. automethod:: find
   .. automethod:: index
   .. automethod:: insert
   .. automethod:: intersects
   .. automethod:: intersects_segment
   .. automethod:: pop
   .. automethod:: protract
   .. automethod:: read
   .. automethod:: remove
   .. automethod:: reverse
   .. automethod:: shift
   .. automethod:: sort
   .. automethod:: write

   
   