docs/2.1.4/_sources/api/gwpy.segments.SegmentList.rst.txt


SegmentList
=========================

.. currentmodule:: gwpy.segments

.. autoclass:: SegmentList
   :no-inherited-members:

   
     None
   

   
   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~SegmentList.append
      ~SegmentList.clear
      ~SegmentList.coalesce
      ~SegmentList.contract
      ~SegmentList.copy
      ~SegmentList.count
      ~SegmentList.extend
      ~SegmentList.extent
      ~SegmentList.find
      ~SegmentList.index
      ~SegmentList.insert
      ~SegmentList.intersects
      ~SegmentList.intersects_segment
      ~SegmentList.pop
      ~SegmentList.protract
      ~SegmentList.read
      ~SegmentList.remove
      ~SegmentList.reverse
      ~SegmentList.shift
      ~SegmentList.sort
      ~SegmentList.to_table
      ~SegmentList.value_slice_to_index
      ~SegmentList.write

   
   

   
   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: append
   .. automethod:: clear
   .. automethod:: coalesce
   .. automethod:: contract
   .. automethod:: copy
   .. automethod:: count
   .. automethod:: extend
   .. automethod:: extent
   .. automethod:: find
   .. automethod:: index
   .. automethod:: insert
   .. automethod:: intersects
   .. automethod:: intersects_segment
   .. automethod:: pop
   .. automethod:: protract
   .. automethod:: read
   .. automethod:: remove
   .. automethod:: reverse
   .. automethod:: shift
   .. automethod:: sort
   .. automethod:: to_table
   .. automethod:: value_slice_to_index
   .. automethod:: write

   
   